Button refactor Code cleanup